feat: add more information content on entrypoints/endpoints

--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-http-proxy/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-http-proxy/src/main/resources/plugin.properties
@@ -5,3 +5,5 @@ description=${project.description}
 class=io.gravitee.plugin.endpoint.http.proxy.HttpProxyEndpointConnectorFactory
 type=endpoint-connector
 features=
+icon=gio:language
+moreInfo.documentationUrl=https://docs.gravitee.io
