--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-get/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-get/src/main/resources/plugin.properties
@@ -1,7 +1,11 @@
 id=http-get
-name=Entrypoint HTTP Get
+name=HTTP GET
 version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.entrypoint.http.get.HttpGetEntrypointConnectorFactory
 type=entrypoint-connector
 features=limit,resume
+icon=gio:language
+moreInfo.description=Let your consumers send synchronous, on-demand requests for events via a standard HTTP GET requests. Use a standard HTTP proxy to mediate between client applications as data consumers and event brokers such as Kafka.
+moreInfo.documentationUrl=https://docs.gravitee.io
+moreInfo.schemaImg=images/http-get.png
