--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-sse/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-sse/src/main/resources/plugin.properties
@@ -1,7 +1,11 @@
 id=sse
-name=Entrypoint SSE
+name=Server-Sent Events
 version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.entrypoint.sse.SseEntrypointConnectorFactory
 type=entrypoint-connector
 features=resume
+icon=gio:cloud-server
+moreInfo.description=Let your consumers subscribe to a continuous stream of events on top of HTTP protocol. SSE is natively supported by all modern browsers and provides built-in capabilities such as client automatic reconnection.
+moreInfo.documentationUrl=https://docs.gravitee.io
+moreInfo.schemaImg=images/server-sent-events.png
