--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-kafka/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-kafka/src/main/resources/plugin.properties
@@ -1,7 +1,11 @@
 id=kafka
-name=Endpoint kafka
+name=Kafka
 version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.endpoint.kafka.KafkaEndpointConnectorFactory
 type=endpoint-connector
 features=limit,resume
+icon=gio:kafka
+moreInfo.description=Stream your Kafka events to consumers thanks to web-friendly protocols such as HTTP or Websocket, and provide real-time integration capability to your ecosystem.
+moreInfo.documentationUrl=https://docs.gravitee.io
+moreInfo.schemaImg=images/kafka.png
