--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>gravitee-apim-plugin-endpoint-mock</artifactId>
     <name>Gravitee.io APIM - Plugin - Endpoint mock</name>
-    <description>Endpoint mock</description>
+    <description>Use a Mock backend to emulate the behaviour of a typical HTTP server and test processes</description>
 
     <dependencyManagement>
         <dependencies>
