--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-post/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-post/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>gravitee-apim-plugin-entrypoint-http-post</artifactId>
     <name>Gravitee.io APIM - Plugin - Entrypoint HTTP Post</name>
-    <description>Entrypoint that allows exposing AsyncAPI using HTTP Post</description>
+    <description>Send an HTTP POST request including URL parameters in the request and process the response from the HTTP server.</description>
 
     <dependencyManagement>
         <dependencies>
