--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-post/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-post/src/main/resources/plugin.properties
@@ -1,7 +1,11 @@
 id=http-post
-name=Entrypoint HTTP Post
+name=HTTP POST
 version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.entrypoint.http.post.HttpPostEntrypointConnectorFactory
 type=entrypoint-connector
 features=
+icon=gio:language
+moreInfo.description=Let your consumers send data to event brokers via synchronous, on-demand HTTP POST requests. Use a standard HTTP proxy to mediate between client applications as data consumers and event brokers such as Kafka.
+moreInfo.documentationUrl=https://docs.gravitee.io
+moreInfo.schemaImg=images/http-post.png
