--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-proxy/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-proxy/src/main/resources/plugin.properties
@@ -1,7 +1,10 @@
 id=http-proxy
-name=Entrypoint HTTP Proxy
+name=HTTP Proxy
 version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.entrypoint.http.proxy.HttpProxyEntrypointConnectorFactory
 type=entrypoint-connector
 features=
+icon=gio:language
+moreInfo.description=${project.description. Use a standard HTTP proxy to mediate between client applications as data consumers and event brokers such as Kafka.
+moreInfo.documentationUrl=https://docs.gravitee.io
