--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-webhook/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-webhook/src/main/resources/plugin.properties
@@ -1,6 +1,10 @@
 id=webhook
-name=Entrypoint Webhook
+name=Webhook
 version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.entrypoint.webhook.WebhookEntrypointConnectorFactory
 type=entrypoint-connector
+icon=gio:webhook
+moreInfo.description=Notify your consumers whenever a significant event occurs in your backend so that they can react immediately. Gravitee will help you manage subscriptions and ensure a delivery guarantee.
+moreInfo.documentationUrl=https://docs.gravitee.io
+moreInfo.schemaImg=images/webhook.png
