--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-websocket/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-websocket/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>gravitee-apim-plugin-entrypoint-websocket</artifactId>
     <name>Gravitee.io APIM - Plugin - Entrypoint Websocket</name>
-    <description>Entrypoint that allows exposing AsyncAPI using Websocket connection</description>
+    <description>Send messages to a server and receive event-driven responses without having to poll the server for a reply.</description>
 
     <dependencyManagement>
         <dependencies>
