refactor(console): use icon from connector plugins

--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/src/main/resources/plugin.properties
@@ -5,7 +5,7 @@ description=${project.description}
 class=io.gravitee.plugin.endpoint.mock.MockEndpointConnectorFactory
 type=endpoint-connector
 features=limit,resume
-icon=gio:page
+icon=images/mock.svg
 moreInfo.description=Use a Mock backend to emulate the behaviour of a typical HTTP server and test processes.
 moreInfo.documentationUrl=https://docs.gravitee.io
 moreInfo.schemaImg=images/mock.png
