--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-get/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-get/src/main/resources/plugin.properties
@@ -5,7 +5,7 @@ description=${project.description}
 class=io.gravitee.plugin.entrypoint.http.get.HttpGetEntrypointConnectorFactory
 type=entrypoint-connector
 features=limit,resume
-icon=gio:language
+icon=images/http.svg
 moreInfo.description=Let your consumers send synchronous, on-demand requests for events via a standard HTTP GET requests. Use a standard HTTP proxy to mediate between client applications as data consumers and event brokers such as Kafka.
 moreInfo.documentationUrl=https://docs.gravitee.io
 moreInfo.schemaImg=images/http-get.png
