--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-websocket/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-websocket/src/main/resources/plugin.properties
@@ -4,7 +4,7 @@ version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.entrypoint.websocket.WebSocketEntrypointConnectorFactory
 type=entrypoint-connector
-icon=gio:websocket
+icon=images/websocket.svg
 moreInfo.description=Connect with your consumers through a persistent and bi-directional connection that can handle high volume and throughput of messages.
 moreInfo.documentationUrl=https://docs.gravitee.io
 moreInfo.schemaImg=images/websocket.png
