--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-proxy/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-proxy/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>gravitee-apim-plugin-entrypoint-http-proxy</artifactId>
     <name>Gravitee.io APIM - Plugin - Entrypoint HTTP Proxy</name>
-    <description>Entrypoint that allows exposing Http SyncApi</description>
+    <description>Web APIs can be accessed using the HTTP protocol. Defines endpoints, valid request and response formats.</description>
 
     <dependencyManagement>
         <dependencies>
