--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-proxy/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-proxy/src/main/resources/plugin.properties
@@ -6,5 +6,6 @@ class=io.gravitee.plugin.entrypoint.http.proxy.HttpProxyEntrypointConnectorFacto
 type=entrypoint-connector
 features=
 icon=images/http.svg
-moreInfo.description=${project.description. Use a standard HTTP proxy to mediate between client applications as data consumers and event brokers such as Kafka.
+moreInfo.description=Expose your existing service with Rest API. Transform your legacy SOAP API into a modern REST endpoint.
 moreInfo.documentationUrl=https://docs.gravitee.io
+moreInfo.schemaImg=images/http-proxy-schema.png
