--- a/gravitee-apim-plugin/gravitee-apim-plugin-apiservice/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-apiservice/pom.xml
@@ -36,5 +36,6 @@
         <module>gravitee-apim-plugin-apiservice-handler</module>
         <module>gravitee-apim-plugin-apiservice-healthcheck-common</module>
         <module>gravitee-apim-plugin-apiservice-healthcheck-http</module>
+        <module>gravitee-apim-plugin-apiservice-servicediscovery-consul</module>
     </modules>
 </project>
