chore: bump particles version

--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -17,8 +17,8 @@
     "@fontsource/libre-franklin": "4.4.5",
     "@gravitee/ui-analytics": "5.16.O",
     "@gravitee/ui-components": "3.38.8",
-    "@gravitee/ui-particles-angular": "5.16.O",
-    "@gravitee/ui-policy-studio-angular": "5.16.O",
+    "@gravitee/ui-particles-angular": "5.17.1",
+    "@gravitee/ui-policy-studio-angular": "5.17.1",
     "@highcharts/map-collection": "1.1.4",
     "@ngx-formly/core": "6.1.1",
     "@ngx-formly/material": "6.1.1",
