--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -48,7 +48,7 @@
         <!-- Management API & Gateway -->
         <gravitee-alert-engine-connectors-ws.version>2.0.0</gravitee-alert-engine-connectors-ws.version>
         <gravitee-connector-http.version>2.1.1</gravitee-connector-http.version>
-        <gravitee-policy-apikey.version>3.1.0-alpha.1</gravitee-policy-apikey.version>
+        <gravitee-policy-apikey.version>3.1.0</gravitee-policy-apikey.version>
         <gravitee-policy-assign-attributes.version>1.5.1</gravitee-policy-assign-attributes.version>
         <gravitee-policy-assign-content.version>1.7.0</gravitee-policy-assign-content.version>
         <gravitee-policy-cache.version>1.15.2</gravitee-policy-cache.version>
@@ -61,19 +61,19 @@
         <gravitee-policy-http-signature.version>1.5.0</gravitee-policy-http-signature.version>
         <gravitee-policy-ipfiltering.version>1.9.0</gravitee-policy-ipfiltering.version>
         <gravitee-policy-json-threat-protection.version>1.3.3</gravitee-policy-json-threat-protection.version>
-        <gravitee-policy-json-to-json.version>2.0.0-alpha.2</gravitee-policy-json-to-json.version>
+        <gravitee-policy-json-to-json.version>2.0.0</gravitee-policy-json-to-json.version>
         <gravitee-policy-json-validation.version>1.6.1</gravitee-policy-json-validation.version>
-        <gravitee-policy-json-xml.version>2.1.0-alpha.1</gravitee-policy-json-xml.version>
+        <gravitee-policy-json-xml.version>2.1.0</gravitee-policy-json-xml.version>
         <gravitee-policy-jws.version>1.3.2</gravitee-policy-jws.version>
-        <gravitee-policy-jwt.version>3.1.0-alpha.1</gravitee-policy-jwt.version>
-        <gravitee-policy-keyless.version>2.1.0-alpha.1</gravitee-policy-keyless.version>
+        <gravitee-policy-jwt.version>3.1.0</gravitee-policy-jwt.version>
+        <gravitee-policy-keyless.version>2.1.0</gravitee-policy-keyless.version>
         <gravitee-policy-latency.version>1.4.0</gravitee-policy-latency.version>
         <gravitee-policy-metrics-reporter.version>2.0.0</gravitee-policy-metrics-reporter.version>
-        <gravitee-policy-message-filtering.version>1.1.0-alpha.1</gravitee-policy-message-filtering.version>
+        <gravitee-policy-message-filtering.version>1.1.0</gravitee-policy-message-filtering.version>
         <gravitee-policy-mock.version>1.13.0</gravitee-policy-mock.version>
-	    <gravitee-policy-oauth2.version>2.1.0-alpha.1</gravitee-policy-oauth2.version>
+	    <gravitee-policy-oauth2.version>2.1.0</gravitee-policy-oauth2.version>
         <gravitee-policy-openid-connect-userinfo.version>1.5.2</gravitee-policy-openid-connect-userinfo.version>
-        <gravitee-policy-override-http-method.version>2.0.0-alpha.2</gravitee-policy-override-http-method.version>
+        <gravitee-policy-override-http-method.version>2.0.0</gravitee-policy-override-http-method.version>
         <!--    Version of policy-ratelimit is also used for policy-quota, policy-spikearrest and gateway-services-ratelimit    -->
         <!--    <gravitee-policy-quota.version>1.15.0</gravitee-policy-quota.version>    -->
         <!--    <gravitee-policy-spikearrest.version>1.15.0</gravitee-policy-spikearrest.version>    -->
@@ -109,7 +109,7 @@
         <gravitee-notifier-slack.version>1.3.0</gravitee-notifier-slack.version>
         <gravitee-notifier-webhook.version>1.1.0</gravitee-notifier-webhook.version>
         <!-- Gateway Only -->
-        <gravitee-reporter-elasticsearch.version>4.1.0-alpha.9</gravitee-reporter-elasticsearch.version>
+        <gravitee-reporter-elasticsearch.version>4.1.0</gravitee-reporter-elasticsearch.version>
         <gravitee-reporter-file.version>2.5.5</gravitee-reporter-file.version>
         <gravitee-reporter-tcp.version>1.4.4</gravitee-reporter-tcp.version>
         <!--    Version of policy-ratelimit is also used for policy-quota, policy-spikearrest and gateway-services-ratelimit    -->
@@ -760,7 +760,7 @@
                 <gravitee-resource-auth-provider-http.version>1.3.0</gravitee-resource-auth-provider-http.version>
                 <gravitee-resource-auth-provider-inline.version>1.3.0</gravitee-resource-auth-provider-inline.version>
                 <gravitee-resource-auth-provider-ldap.version>1.3.0</gravitee-resource-auth-provider-ldap.version>
-                <gravitee-resource-cache-redis.version>1.3.0-alpha.1</gravitee-resource-cache-redis.version>
+                <gravitee-resource-cache-redis.version>1.3.0</gravitee-resource-cache-redis.version>
                 <gravitee-resource-oauth2-provider-keycloak.version>1.9.2</gravitee-resource-oauth2-provider-keycloak.version>
                 <!-- Using service GeoIP requires to adapt Java HeapSpace: https://github.com/gravitee-io/gravitee-service-geoip/blob/master/README.adoc -->
                 <!-- So keep it commented for the moment -->
