--- a/gravitee-apim-portal-webui/package.json
+++ b/gravitee-apim-portal-webui/package.json
@@ -84,14 +84,14 @@
     "babel-jest": "27.5.1",
     "compression": "1.7.4",
     "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "http-proxy-middleware": "1.3.1",
     "jest": "27.5.1",
     "license-check-and-add": "4.0.3",
     "ng-packagr": "^13.3.0",
-    "prettier": "^2.6.0",
+    "prettier": "2.8.4",
     "protractor": "~7.0.0",
     "ts-node": "8.10.2",
     "typescript": "4.6.2"
