--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <json-smart.version>2.4.7</json-smart.version>
         <jsoup.version>1.15.3</jsoup.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <lucene.version>7.7.3</lucene.version>
+        <lucene.version>9.5.0</lucene.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <netty-tcnative-boringssl-static.version>2.0.48.Final</netty-tcnative-boringssl-static.version>
         <nimbus-jose-jwt.version>9.15.2</nimbus-jose-jwt.version>
@@ -672,7 +672,7 @@
 
             <dependency>
                 <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-analyzers-common</artifactId>
+                <artifactId>lucene-analysis-common</artifactId>
                 <version>${lucene.version}</version>
             </dependency>
 
