--- a/gravitee-apim-e2e/docker/common/docker-compose-mongo.yml
+++ b/gravitee-apim-e2e/docker/common/docker-compose-mongo.yml
@@ -30,7 +30,7 @@ services:
       - data-mongo:/data/db
       - ./.logs/apim-mongodb:/var/log/mongodb
     healthcheck:
-      test: echo 'db.runCommand({serverStatus:1}).ok' | mongo admin --quiet | grep 1
+      test: mongosh --eval 'db.runCommand({serverStatus:1}).ok' --quiet | grep 1
       interval: 2s
       timeout: 10s
       retries: 5
