--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -61,6 +61,7 @@
     "diff2html": "3.4.16",
     "dragular": "4.6.0",
     "highcharts": "9.2.2",
+    "highcharts-angular": "3.1.2",
     "highlight.js": "10.7.3",
     "jdenticon": "2.2.0",
     "jquery": "3.6.0",
