refactor: move liquibase changes to next version

--- a/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
+++ b/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
@@ -145,3 +145,6 @@ databaseChangeLog:
       - file: liquibase/changelogs/v3_20_0/schema.yml
   - include:
       - file: liquibase/changelogs/v3_20_4/schema.yml
+
+  - include:
+      - file: liquibase/changelogs/v3_21_1/schema.yml
