--- a/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
+++ b/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
@@ -143,3 +143,5 @@ databaseChangeLog:
       - file: liquibase/changelogs/v3_19_0/schema_gko.yml
   - include:
       - file: liquibase/changelogs/v3_20_0/schema.yml
+  - include:
+      - file: liquibase/changelogs/v3_20_4/schema.yml
