chore: update the k6 injector Dockerfile to inherit from the mostafamoradian/xk6-kafka image instead of the official k6 one

--- a/gravitee-apim-perf/Dockerfile
+++ b/gravitee-apim-perf/Dockerfile
@@ -10,8 +10,7 @@ RUN yarn install
 COPY --chown=node:node . .
 RUN rm -r dist/ && yarn build
 
-
-FROM grafana/k6:0.42.0@sha256:aba50200f5f832925bfc20d2fd822f522f83a6ee794233d46f8837588eba5799 as runner
+FROM mostafamoradian/xk6-kafka:0.17.0 as runner
 
 USER root
 RUN apk add --update --no-cache jq util-linux bash
