refactor: allow to use the new cluster plugins
   - remove the use of cache manager for now (will be migrated later)
   - add StandaloneClusterManager by default on test sdk
   - remove hazelcast cluster manager from default distribution
   - add an example of hazelcast-cluster.xml
   - migrate heartbeat plugin to the new cluster manager plugin

--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -118,6 +118,14 @@
     </properties>
 
     <dependencies>
+        <!-- Clusters -->
+        <dependency>
+            <groupId>io.gravitee.node</groupId>
+            <artifactId>gravitee-node-cluster-plugin-standalone</artifactId>
+            <version>${gravitee-node.version}</version>
+            <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
         <!-- Connectors -->
         <dependency>
             <groupId>io.gravitee.ae</groupId>
