--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -768,12 +768,14 @@
 
                 <!-- Enterprise plugins -->
                 <gravitee-policy-assign-metrics.version>2.0.1</gravitee-policy-assign-metrics.version>
+                <gravitee-policy-transform-avro-json.version>1.0.0-alpha.4</gravitee-policy-transform-avro-json.version>
                 <gravitee-policy-data-logging-masking.version>2.0.3</gravitee-policy-data-logging-masking.version>
                 <gravitee-policy-interrupt.version>1.1.0</gravitee-policy-interrupt.version>
                 <gravitee-entrypoint-sse-advanced.version>3.0.0-alpha.6</gravitee-entrypoint-sse-advanced.version>
                 <gravitee-entrypoint-webhook-advanced.version>1.0.0-alpha.9</gravitee-entrypoint-webhook-advanced.version>
                 <gravitee-endpoint-kafka-advanced.version>1.2.0-alpha.6</gravitee-endpoint-kafka-advanced.version>
                 <gravitee-endpoint-mqtt5-advanced.version>1.1.0-alpha.6</gravitee-endpoint-mqtt5-advanced.version>
+                <gravitee-resource-schema-registry-confluent.version>1.0.0-alpha.7</gravitee-resource-schema-registry-confluent.version>
 
                 <!-- Management API Only -->
                 <!-- Gateway Only -->
@@ -822,6 +824,13 @@
                     <groupId>com.graviteesource.policy</groupId>
                     <artifactId>gravitee-policy-assign-metrics</artifactId>
                     <version>${gravitee-policy-assign-metrics.version}</version>
+                    <type>zip</type>
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>com.graviteesource.policy</groupId>
+                    <artifactId>gravitee-policy-transform-avro-json</artifactId>
+                    <version>${gravitee-policy-transform-avro-json.version}</version>
                     <type>zip</type>
                     <scope>runtime</scope>
                 </dependency>
@@ -920,6 +929,13 @@
                     <groupId>io.gravitee.resource</groupId>
                     <artifactId>gravitee-resource-oauth2-provider-keycloak</artifactId>
                     <version>${gravitee-resource-oauth2-provider-keycloak.version}</version>
+                    <type>zip</type>
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>com.graviteesource.resource</groupId>
+                    <artifactId>gravitee-resource-schema-registry-confluent</artifactId>
+                    <version>${gravitee-resource-schema-registry-confluent.version}</version>
                     <type>zip</type>
                     <scope>runtime</scope>
                 </dependency>
