--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2209,7 +2209,7 @@ workflows:
                       - setup
                   matrix:
                       parameters:
-                          version: ["5.6.16", "6.8.23", "7.17.8"]
+                          version: ["5.6.16", "6.8.23", "7.17.8", "8.7.0"]
 
     release_notes_apim:
         when:
