feat: add support for multi-servers
https://gravitee.atlassian.net/browse/ARCHI-227

--- a/gravitee-apim-gateway/gravitee-apim-gateway-standalone/gravitee-apim-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-standalone/gravitee-apim-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -41,8 +41,9 @@
 #        - cert: ${gravitee.home}/security/mycompany.com.pem
 #          key: ${gravitee.home}/security/mycompany.com.key
 #      password: secret
+#      watch: true # Watch for any updates on the keystore and reload it. Default is true.
 #    truststore:
-#      type: jks # Supports jks, pem, pkcs12, self-signed
+#      type: jks # Supports jks, pem, pkcs12
 #      path: ${gravitee.home}/security/truststore.jks
 #      password: secret
 #    sni: false
