--- a/gravitee-apim-gateway/gravitee-apim-gateway-handlers/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-handlers/pom.xml
@@ -34,5 +34,6 @@
 
     <modules>
         <module>gravitee-apim-gateway-handlers-api</module>
+        <module>gravitee-apim-gateway-handlers-sync</module>
     </modules>
 </project>
