feat: use latest cache plugin
   - bump gravitee node version
   - bump gravitee plugin version
   - bump gravitee expression language version
   - bump gravitee cache resource version
   - bump gravitee schema registry confluent resource version
   - bump gravitee platform repository api version
   - use new Inmemory cache

--- a/gravitee-apim-gateway/gravitee-apim-gateway-flow/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-flow/pom.xml
@@ -37,6 +37,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.gravitee.node</groupId>
+            <artifactId>gravitee-node-cache-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
@@ -53,11 +57,6 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>${jmh.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.gravitee.node</groupId>
-            <artifactId>gravitee-node-cache</artifactId>
         </dependency>
 
         <dependency>
