--- a/gravitee-apim-gateway/gravitee-apim-gateway-policy/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-policy/pom.xml
@@ -88,12 +88,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>io.gravitee.node</groupId>
-            <artifactId>gravitee-node-cache</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
         <!-- Jackson dependencies -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -128,6 +122,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gravitee.node</groupId>
+            <artifactId>gravitee-node-cache-common</artifactId>
         </dependency>
     </dependencies>
 
