--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -94,7 +94,7 @@
         <gravitee-policy-xml-threat-protection.version>1.3.2</gravitee-policy-xml-threat-protection.version>
         <gravitee-policy-xml-validation.version>1.1.0</gravitee-policy-xml-validation.version>
         <gravitee-policy-xslt.version>2.0.0</gravitee-policy-xslt.version>
-        <gravitee-resource-cache.version>1.9.0</gravitee-resource-cache.version>
+        <gravitee-resource-cache.version>1.10.0-alpha.2</gravitee-resource-cache.version>
         <gravitee-resource-oauth2-provider-am.version>2.0.0</gravitee-resource-oauth2-provider-am.version>
         <gravitee-resource-oauth2-provider-generic.version>2.0.0</gravitee-resource-oauth2-provider-generic.version>
         <gravitee-service-discovery-consul.version>1.3.0</gravitee-service-discovery-consul.version>
@@ -122,6 +122,14 @@
         <dependency>
             <groupId>io.gravitee.node</groupId>
             <artifactId>gravitee-node-cluster-plugin-standalone</artifactId>
+            <version>${gravitee-node.version}</version>
+            <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- Clusters -->
+        <dependency>
+            <groupId>io.gravitee.node</groupId>
+            <artifactId>gravitee-node-cache-plugin-standalone</artifactId>
             <version>${gravitee-node.version}</version>
             <type>zip</type>
             <scope>runtime</scope>
@@ -797,7 +805,7 @@
                 <gravitee-entrypoint-webhook-advanced.version>1.0.0-alpha.9</gravitee-entrypoint-webhook-advanced.version>
                 <gravitee-endpoint-kafka-advanced.version>1.3.0-alpha.1</gravitee-endpoint-kafka-advanced.version>
                 <gravitee-endpoint-mqtt5-advanced.version>1.2.0-alpha.1</gravitee-endpoint-mqtt5-advanced.version>
-                <gravitee-resource-schema-registry-confluent.version>1.0.0-alpha.8</gravitee-resource-schema-registry-confluent.version>
+                <gravitee-resource-schema-registry-confluent.version>1.0.0-alpha.9</gravitee-resource-schema-registry-confluent.version>
 
                 <!-- Management API Only -->
                 <!-- Gateway Only -->
